[workspace]
members = [
    "crates/aligner",
    "crates/analyzer",
    "crates/emitter",
    "crates/formatter",
    "crates/languageserver",
    "crates/mdbook",
    "crates/metadata",
    "crates/parser",
    "crates/path",
    "crates/sourcemap",
    "crates/std",
    "crates/tests",
    "crates/veryl",
]
exclude = [
    "support/sourcemap-resolver",
]
resolver = "2"

[workspace.package]
authors     = ["dalance@gmail.com"]
repository  = "https://github.com/veryl-lang/veryl"
keywords    = ["parser", "verilog", "systemverilog"]
categories  = ["parsing"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "A modern hardware description language"

[workspace.dependencies]
anyhow          = "1.0"
clap            = {version = "4.5.23", features = ["derive"]}
futures         = "0.3.31"
log             = "0.4.22"
mdbook          = "0.4.43"
miette          = {version = "7.4"}
once_cell       = "1.20"
pulldown-cmark  = "0.12.2"
regex           = "1.11.1"
semver          = {version = "1.0", features = ["serde"]}
serde           = {version = "1.0", features = ["derive"]}
serde_json      = "1.0"
similar         = {version = "2.6.0", features = ["text", "inline"]}
strnum_bitwidth = "0.1.2"
tempfile        = "3.14"
thiserror       = "2.0"
tokio           = {version = "1.42.0", features = ["full"]}
toml            = "0.8.19"
url             = {version = "2.5", features = ["serde"]}
walkdir         = "2.5.0"

[workspace.metadata.release]
tag = false

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.bench]
debug = true
