[workspace]
members = [
    "crates/aligner",
    "crates/analyzer",
    "crates/emitter",
    "crates/formatter",
    "crates/languageserver",
    "crates/mdbook",
    "crates/metadata",
    "crates/migrator",
    "crates/parser",
    "crates/path",
    "crates/simulator",
    "crates/sourcemap",
    "crates/std",
    "crates/tests",
    "crates/veryl",
    "support/highlightgen",
]
exclude = [
    "support/sourcemap-resolver",
    "support/zed",
]
resolver = "2"

[workspace.package]
authors     = ["dalance@gmail.com"]
repository  = "https://github.com/veryl-lang/veryl"
keywords    = ["parser", "verilog", "systemverilog"]
categories  = ["parsing"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "A modern hardware description language"
edition     = "2024"

[workspace.dependencies]
anyhow          = "1.0"
clap            = {version = "4.5.58", features = ["derive"]}
console         = "0.16.2"
futures         = "0.3.31"
fxhash          = "0.2.1"
handlebars      = "6.4"
log             = "0.4.29"
mdbook          = "0.4.51"
miette          = {version = "7.6"}
num-bigint      = "0.4.6"
num-traits      = "0.2.19"
once_cell       = "1.21"
parol_runtime   = "4.1"
paste           = "1.0"
pulldown-cmark  = "0.13.0"
regex           = "1.12.3"
scnr2           = "0.3.3"
semver          = {version = "1.0", features = ["serde"]}
serde           = {version = "1.0", features = ["derive"]}
serde_json      = "1.0"
similar         = {version = "2.7.0", features = ["text", "inline"]}
smallvec        = "1.15"
strnum_bitwidth = "0.1.2"
tempfile        = "3.25"
thiserror       = "2.0"
tokio           = {version = "1.48.0", features = ["full"]}
toml            = "1.0.1"
url             = {version = "2.5", features = ["serde"]}
walkdir         = "2.5.0"

[workspace.metadata.release]
tag = false

[profile.dev.build-override]
opt-level = 3

[profile.dev]
debug = false

[profile.release.build-override]
opt-level = 3

[profile.release]
lto = true
strip = "debuginfo"

[profile.bench]
debug = true

[profile.release-verylup]
inherits = "release"
lto = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
