[package]
name = "veryl-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp    = "0.17.0"
tokio        = {version = "1.23.0", features = ["full"]}
veryl-parser = {version = "0.1.0", path = "../parser"}
dashmap      = "5.4.0"
