[package]
name                  = "veryl-aligner"
version               = "0.14.2-rc.1"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[dependencies]
veryl-parser = {version = "0.14.2-rc.1", path = "../parser"}
