[package]
name                  = "veryl-analyzer"
version               = "0.16.5"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap           = "0.6.3"
daggy           = "0.9.0"
fxhash          = {workspace = true}
itertools       = "0.14.0"
log             = {workspace = true}
num-bigint      = "0.4.6"
num-traits      = "0.2.19"
smallvec        = {workspace = true}
strnum_bitwidth = {workspace = true}
thiserror       = {workspace = true}
veryl-metadata  = {version = "0.16.5", path = "../metadata"}
veryl-parser    = {version = "0.16.5", path = "../parser"}

[target.'cfg(target_family = "wasm")'.dependencies]
miette          = {workspace = true, features = ["fancy-no-syscall"]}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
miette          = {workspace = true, features = ["fancy"]}

[dev-dependencies]
toml = {workspace = true}
