[package]
name                  = "veryl-analyzer"
version               = "0.18.0"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap            = "0.6.3"
daggy            = {workspace = true}
fxhash           = {workspace = true}
indent           = {workspace = true}
itertools        = "0.14.0"
log              = {workspace = true}
malachite-bigint = "0.9.1"
num-traits       = {workspace = true}
paste            = {workspace = true}
similar          = {workspace = true}
smallvec         = {workspace = true}
strnum_bitwidth  = {workspace = true}
strum            = "0.28.0"
strum_macros     = "0.28.0"
thiserror        = {workspace = true}
vcd              = {workspace = true}
veryl-metadata   = {version = "0.18.0", path = "../metadata"}
veryl-parser     = {version = "0.18.0", path = "../parser"}

[target.'cfg(target_family = "wasm")'.dependencies]
miette          = {workspace = true, features = ["fancy-no-syscall"]}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
miette          = {workspace = true, features = ["fancy"]}

[dev-dependencies]
toml = {workspace = true}
