[package]
name                  = "veryl-cache"
version               = "0.20.2"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[dependencies]
blake3     = {workspace = true}
log        = {workspace = true}
serde      = {workspace = true}
toml       = {workspace = true}
veryl-path = {version = "0.20.2", path = "../path"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fs4 = {version = "1.1.0", features = ["sync"]}

[dev-dependencies]
tempfile = {workspace = true}
