[package]
name                  = "veryl-cosim"
version               = "0.18.0"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[lib]
crate-type = ["cdylib"]

[dependencies]
veryl-analyzer  = {version = "0.18.0", path = "../analyzer"}
veryl-metadata  = {version = "0.18.0", path = "../metadata"}
veryl-parser    = {version = "0.18.0", path = "../parser"}
veryl-path      = {version = "0.18.0", path = "../path"}
veryl-simulator = {version = "0.18.0", path = "../simulator"}
