[package]
name                  = "veryl-cosim"
version               = "0.20.2"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[lib]
crate-type = ["cdylib"]

[dependencies]
veryl-analyzer  = {version = "0.20.2", path = "../analyzer"}
veryl-metadata  = {version = "0.20.2", path = "../metadata"}
veryl-parser    = {version = "0.20.2", path = "../parser"}
veryl-path      = {version = "0.20.2", path = "../path"}
veryl-simulator = {version = "0.20.2", path = "../simulator"}
