[package]
name                  = "veryl-emitter"
version               = "0.13.4"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde           = {workspace = true}
strnum_bitwidth = {workspace = true}
veryl-aligner   = {version = "0.13.4", path = "../aligner"}
veryl-analyzer  = {version = "0.13.4", path = "../analyzer"}
veryl-metadata  = {version = "0.13.4", path = "../metadata"}
veryl-parser    = {version = "0.13.4", path = "../parser"}
veryl-sourcemap = {version = "0.13.4", path = "../sourcemap"}

[dev-dependencies]
toml = {workspace = true}
