[package]
name                  = "veryl-emitter"
version               = "0.20.1"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde           = {workspace = true}
strnum_bitwidth = {workspace = true}
veryl-aligner   = {version = "0.20.1", path = "../aligner"}
veryl-analyzer  = {version = "0.20.1", path = "../analyzer"}
veryl-metadata  = {version = "0.20.1", path = "../metadata"}
veryl-parser    = {version = "0.20.1", path = "../parser"}
veryl-pretty    = {version = "0.20.1", path = "../pretty"}
veryl-sourcemap = {version = "0.20.1", path = "../sourcemap"}

[dev-dependencies]
toml = {workspace = true}
