[package]
name                  = "veryl-formatter"
version               = "0.14.2-rc.1"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veryl-aligner  = {version = "0.14.2-rc.1", path = "../aligner"}
veryl-analyzer = {version = "0.14.2-rc.1", path = "../analyzer"}
veryl-metadata = {version = "0.14.2-rc.1", path = "../metadata"}
veryl-parser   = {version = "0.14.2-rc.1", path = "../parser"}
