[package]
name                  = "veryl-ls"
version               = "0.5.6"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"
exclude               = ["build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossbeam-channel = "0.5.6"
async-channel     = "2.1"
dashmap           = "5.5.3"
futures           = "0.3.30"
glob              = "0.3.1"
ropey             = "1.6.1"
miette            = {workspace = true}
serde_json        = {workspace = true}
tokio             = {version = "1.35.1", features = ["full"]}
tower-lsp         = "0.20.0"
veryl-analyzer    = {version = "0.5.6", path = "../analyzer"}
veryl-formatter   = {version = "0.5.6", path = "../formatter"}
veryl-metadata    = {version = "0.5.6", path = "../metadata"}
veryl-parser      = {version = "0.5.6", path = "../parser"}
