[package]
name                  = "veryl-ls"
version               = "0.16.3"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true
exclude               = ["build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossbeam-channel = "0.5.6"
async-channel     = "2.5"
dashmap           = "6.1.0"
futures           = {workspace = true}
glob              = "0.3.2"
ropey             = "1.6.1"
mark-flaky-tests  = {version = "1.0.2", features = ["tokio"]}
miette            = {workspace = true}
ntest             = "0.9.3"
serde_json        = {workspace = true}
tokio             = {workspace = true}
tower-lsp-server  = "0.22.0"
veryl-analyzer    = {version = "0.16.3", path = "../analyzer"}
veryl-formatter   = {version = "0.16.3", path = "../formatter"}
veryl-metadata    = {version = "0.16.3", path = "../metadata"}
veryl-parser      = {version = "0.16.3", path = "../parser"}
veryl-path        = {version = "0.16.3", path = "../path"}
