[package]
name                  = "mdbook-veryl"
version               = "0.11.2"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow          = {workspace = true}
clap            = {workspace = true}
line-col        = "0.2.1"
mdbook          = {workspace = true}
pulldown-cmark  = "0.11.0"
regex           = {workspace = true}
semver          = {workspace = true}
serde_json      = {workspace = true}
similar         = {workspace = true}
toml            = {workspace = true}
veryl-analyzer  = {version = "0.11.2", path = "../analyzer"}
veryl-formatter = {version = "0.11.2", path = "../formatter"}
veryl-metadata  = {version = "0.11.2", path = "../metadata"}
veryl-parser    = {version = "0.11.2", path = "../parser"}
