[package]
name                  = "veryl-metadata"
version               = "0.14.2-rc.1"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-repository = {version = "0.35.0", optional = true, features = ["blocking-network-client", "blocking-http-transport-reqwest", "blocking-http-transport-reqwest-rust-tls"]}
log            = {workspace = true}
once_cell      = {workspace = true}
regex          = {workspace = true}
semver         = {workspace = true}
serde          = {workspace = true}
serde_regex    = "1.1"
spdx           = "0.10.8"
thiserror      = {workspace = true}
toml           = {workspace = true}
url            = {workspace = true}
uuid           = {version = "1.16", default-features = false, features = ["v5", "serde"]}
veryl-parser   = {version = "0.14.2-rc.1", path = "../parser"}
veryl-path     = {version = "0.14.2-rc.1", path = "../path"}
veryl-std      = {version = "0.14.2-rc.1", path = "../std"}
walkdir        = {workspace = true}
which          = "7.0"

[target.'cfg(target_family = "wasm")'.dependencies]
miette         = {workspace = true, features = ["fancy-no-syscall"]}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
miette         = {workspace = true, features = ["fancy"]}

[dev-dependencies]
tempfile       = {workspace = true}

[features]
default      = ["git-command"]
git-command  = []
git-gitoxide = ["dep:git-repository"]
