[package]
name                  = "veryl-metadata"
version               = "0.20.2"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log                 = {workspace = true}
once_cell           = {workspace = true}
pathdiff            = "0.2.3"
regex               = {workspace = true}
semver              = {workspace = true}
serde               = {workspace = true}
serde_json          = {workspace = true}
serde_regex         = "1.2"
spdx                = "0.13.4"
thiserror           = {workspace = true}
toml                = {workspace = true}
url                 = {workspace = true}
uuid                = {version = "1.23", default-features = false, features = ["v5", "serde"]}
veryl-component-sys = {version = "0.1.0", path = "../component/sys"}
veryl-parser        = {version = "0.20.2", path = "../parser"}
veryl-path          = {version = "0.20.2", path = "../path"}
veryl-std           = {version = "0.20.2", path = "../std"}
walkdir             = {workspace = true}

[target.'cfg(target_family = "wasm")'.dependencies]
miette         = {workspace = true, features = ["fancy-no-syscall"]}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
gix            = {version = "0.85.0", optional = true, features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "revision", "status", "worktree-mutation", "index", "tree-editor"]}
miette         = {workspace = true, features = ["fancy"]}
which          = "8.0"

[dev-dependencies]
serde_json     = {workspace = true}
tempfile       = {workspace = true}
# enable gitoxide for this crate's own git tests under isolated `cargo test -p`
veryl-metadata = {path = ".", features = ["git-gitoxide"]}

[features]
default      = ["git-command"]
git-command  = []
git-gitoxide = ["dep:gix"]
