[package]
name                  = "veryl-parser"
version               = "0.10.1"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"
exclude               = ["build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow        = {workspace = true}
bimap         = "0.6.3"
miette        = {workspace = true}
once_cell     = {workspace = true}
parol_runtime = {version = "0.23.0", features = ["auto_generation"]}
paste         = "1.0"
regex         = {workspace = true}
thiserror     = {workspace = true}

[build-dependencies]
parol         =  "0.29.0"
parol_runtime = {version = "0.23.0", features = ["auto_generation"]}
walkdir       = "2.5.0"
