[package]
name                  = "veryl-parser"
version               = "0.13.5"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"
exclude               = ["build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow        = {workspace = true}
bimap         = "0.6.3"
once_cell     = {workspace = true}
parol_runtime = {version = "2.2", features = ["regex_automata"], default-features = false}
paste         = "1.0"
regex         = {workspace = true}
thiserror     = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
miette        = {workspace = true, features = ["fancy-no-syscall"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
miette        = {workspace = true, features = ["fancy"]}

[build-dependencies]
parol         = "2.2"
parol_runtime = "2.2"
