[package]
name                  = "veryl-simulator"
version               = "0.19.1"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[dependencies]
clap           = {workspace = true}
daggy          = {workspace = true}
fst-writer     = {workspace = true}
fxhash         = {workspace = true}
indent         = {workspace = true}
log            = {workspace = true}
miette         = {workspace = true}
serde_json     = {workspace = true}
thiserror      = {workspace = true}
num-traits     = {workspace = true}
toml           = {workspace = true}
vcd            = {workspace = true}
veryl-analyzer = {version = "0.19.1", path = "../analyzer"}
veryl-metadata = {version = "0.19.1", path = "../metadata"}
veryl-parser   = {version = "0.19.1", path = "../parser"}
veryl-path     = {version = "0.19.1", path = "../path"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
cranelift      = "0.130.1"
memmap2        = "0.9.9"
target-lexicon = "0.13.4"

[dev-dependencies]
criterion = {workspace = true}
wellen    = "0.20.5"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = {workspace = true}

[features]
profile = []

[[bench]]
name = "benchmark"
harness = false
