[package]
name                  = "veryl-simulator"
version               = "0.20.0"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition.workspace     = true

[dependencies]
clap           = {workspace = true}
daggy          = {workspace = true}
fst-writer     = {workspace = true}
fxhash         = {workspace = true}
indent         = {workspace = true}
log            = {workspace = true}
miette         = {workspace = true}
serde_json     = {workspace = true}
smallvec       = {workspace = true}
thiserror      = {workspace = true}
num-bigint     = {workspace = true}
num-traits     = {workspace = true}
toml           = {workspace = true}
vcd            = {workspace = true}
veryl-analyzer = {version = "0.20.0", path = "../analyzer"}
veryl-metadata = {version = "0.20.0", path = "../metadata"}
veryl-parser   = {version = "0.20.0", path = "../parser"}
veryl-path     = {version = "0.20.0", path = "../path"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
cranelift      = "0.132.0"
libloading     = "0.9"
memmap2        = "0.9.9"
target-lexicon = "0.13.4"

[dev-dependencies]
criterion = {workspace = true}
wellen    = "0.22.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = {workspace = true}

[features]
profile = []

[[bench]]
name = "benchmark"
harness = false
